fix align

--- a/CSS/Projects/Navbar1/styles/style.css
+++ b/CSS/Projects/Navbar1/styles/style.css
@@ -24,11 +24,12 @@ header {
 }
 
 .nav-links li {
-    margin: 0px 20px;
+    padding: 10px 20px;
 }
 
 .logo {
     width: 10%;
+    padding: 10px 0px;
 }
 
 a {
